Implement quote approval workflow with new DTO and endpoints
Added QuoteDecisionDTO, new endpoints for approving/rejecting quotes, and enhanced QuoteDTO with additional fields. Introduced QuoteStatus Enum and updated backend logic to support quote workflows, including aggregation of discount and status changes. Adjusted security configuration and refactored related mapping and service layers for consistency.